--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
@@ -13,27 +13,28 @@
 
 <body>
 
-  <div class="flex-box">
+  <main>
+    <h1 class="sr-only">QR Code Challenge scan the QR code to improve your front-end skills!</h1>
 
     <div class="container">
+      <h2 class="sr-only">Card with QR code</h2>
 
       <div class="qr">
         <img src="images/image-qr-code.png" alt="">
       </div>
 
       <div class="content">
-        <p>Improve your front-end <br>skills by building projects</p>
+        <h1 class="improve-skills">Improve your front-end skills by building projects</h1>
       
        <span>Scan the QR code to visit Frontend <br> Mentor and take your coding skills to <br>the next level</span>
       </div>
 
     </div>
-  </div>
-  <div class="attribution">
+  </main>
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">REFH4CK</a>.
-  </div>
+  </footer>
   
-
 </body>
 </html>
