--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </main>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/R3FH4CK">REFH4CK</a>.
+    Coded by <a href="https://github.com/REFH4CK">REFH4CK</a>.
   </footer>
   
 </body>
