Add the html tag <meta name="description">

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-
+  <meta name="description" content="A QR code shorthand to Frontend Mentor page">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | QR code component</title>
@@ -16,20 +16,20 @@
   <main>
     <h1 class="sr-only">QR Code Challenge scan the QR code to improve your front-end skills!</h1>
 
-    <div class="container">
+    <section class="container">
       <h2 class="sr-only">Card with QR code</h2>
 
-      <div class="qr">
+      <article class="qr">
         <img src="images/image-qr-code.png" alt="">
-      </div>
+      </article>
 
-      <div class="content">
+      <article class="content">
         <h1 class="improve-skills">Improve your front-end skills by building projects</h1>
       
        <span>Scan the QR code to visit Frontend <br> Mentor and take your coding skills to <br>the next level</span>
-      </div>
+      </article>
 
-    </div>
+    </section>
   </main>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
